# CppSqliteDatastorage

./: CMakeLists.txt  README.MD
src/: main.cpp
src/_debug_utils/: _debug_assert.hpp
src/calculator/: calculator.cpp  calculator.hpp
src/client_cli/: client_cli.h
src/sqlite/: Handle.hpp  SQLite.hpp
tests/: CMakeLists.txt
tests/src/: calculator_test.cpp
